--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
           <button>1</button>
           <button>2</button>
           <button>3</button>
-          <button>del</button>
+          <button class="del">del</button>
           <button>4</button>
           <button>5</button>
           <button>6</button>
-          <button>+</button>
+          <button class="operator">+</button>
           <button>7</button>
           <button>8</button>
           <button>9</button>
-          <button>-</button>
+          <button class="operator">-</button>
           <button>.</button>
           <button>0</button>
-          <button>/</button>
-          <button>*</button>
+          <button class="operator">&#247;</button>
+          <button class="operator">&#215;</button>
           <button class="clear">clear</button>
           <button class="equal">=</button>
         </div>
